fix Makefile, compile errors

--- a/project1/Makefile
+++ b/project1/Makefile
@@ -1,7 +1,8 @@
 CC=g++
 CFLAGS=-g -O3 --std=c++11
+OBJECTS = ref_solution.o ahocorasick.o
 
-run: ref_solution.o
+run: $(OBJECTS)
 	$(CC) $(CFLAGS) $^ -o $@
 
 %.o: %.cpp
