roll back Makefile

--- a/project1/Makefile
+++ b/project1/Makefile
@@ -3,7 +3,7 @@ CFLAGS=-g -O3 --std=c++11
 OBJECTS = ref_solution.o ahocorasick.o
 
 run: $(OBJECTS)
-	$(CC) $(CFLAGS) $^ -o $@ -lpthread -lboost_system -lboost_thread
+	$(CC) $(CFLAGS) $^ -o $@ -lpthread
 
 %.o: %.cpp
 	$(CC) $(CFLAGS) -c $^ -o $@
