--- a/project2/Makefile
+++ b/project2/Makefile
@@ -1,2 +1,2 @@
 all : main.cpp
-	g++ -o test -std=c++0x -g main.cpp transaction.cpp monitor.cpp
+	g++ -o test -std=c++0x -g main.cpp transaction.cpp monitor.cpp -lpthread
