--- a/project3/Makefile
+++ b/project3/Makefile
@@ -1,2 +1,2 @@
 all : main.cpp threadpool.cpp
-	g++ -g -std=c++0x -o run main.cpp threadpool.cpp -lpthread
+	g++ -O3 -std=c++0x -o run main.cpp threadpool.cpp -lpthread
